--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-toastify": "^8.2.0",
     "web3": "^1.7.1"
   },
   "devDependencies": {
